--- a/runtime/pages/page7_trialScatterplots.Rmd
+++ b/runtime/pages/page7_trialScatterplots.Rmd
@@ -25,21 +25,7 @@ plotOutput("scatter_mu")
 ```
 
 ```{r, context="server"}
-make_scatter_plot_mu <- reactive({
-  if (input$groupScatter == "None") {
-    aes <- aes_string(x = input$muxscatter, y = input$muyscatter)
-  }
-  else{
-    aes <- aes_string(x = input$muxscatter, y = input$muyscatter, col = input$groupScatter)
-  }
-
-  p <- ggplot(get_mu_dyn_long(), aes) +
-    geom_point(alpha = 0.5) # Set the alpha to make overlapping points more visible
-
-  return(p)
-})
-
 output$scatter_mu <- renderPlot({
-  make_scatter_plot_mu()
+  make_scatter_plot_mu(get_mu_dyn_long(), input$muxscatter, input$muyscatter, input$groupScatter, baseSize = input$baseSize)
 }, height = reactive(input$plotheight))
 ```
