--- a/runtime/pages/sidebar_dynamicDataFiltering.Rmd
+++ b/runtime/pages/sidebar_dynamicDataFiltering.Rmd
@@ -6,9 +6,13 @@ selectizeInput("filterTrials", "Trials", choices = c(1,2,3,4,5,6), selected = c(
 selectizeInput("filterTargets", "Target Steps", choices = c(TRUE, FALSE), selected = c(FALSE), multiple = TRUE)
 selectizeInput("filterOutliers", "Outliers", choices = c(TRUE, FALSE), selected = c(FALSE), multiple = TRUE) # INCLUDE outliers (TRUE), INCLUDE non-outliers (FALSE)
 selectizeInput("filterPractice", "Familiarization", choices = c(TRUE, FALSE), selected = c(FALSE), multiple = TRUE)
+selectizeInput("filterStartCondition", "Started with Noise", choices = c(TRUE, FALSE), selected = c(TRUE, FALSE), multiple = TRUE)
 ```
 #### Figure Options
 ```{r}
 numericInput("plotheight", "Plot Height",
   min = 50, max = Inf, value = 500, step = 50)
+
+numericInput("baseSize", "Base Size",
+  min = 1, max = Inf, value = 10, step = 1)
 ```
