--- a/runtime/pages/page9_variability.Rmd
+++ b/runtime/pages/page9_variability.Rmd
@@ -6,6 +6,7 @@ varDatatypes <- c("stepLengths", "stepWidths")
 varMetrics <- c("cv", "mean", "sd")
 selectizeInput("plotVar", "Variability of", choices = varDatatypes, selected = varDatatypes[1], multiple = FALSE)
 selectizeInput("plotMetric", "Metric", choices = varMetrics, selected = varMetrics[1], multiple = FALSE)
+selectizeInput("varCategory", "Category", choices = categoriesExtra, selected = "VFD", multiple = TRUE)
 ```
 
 Column
@@ -18,6 +19,8 @@ plotOutput("var")
 
 ```{r, context="server"}
 output$var <- renderPlot({
-  plot_variability_data(get_mu_dyn(), participants, input$plotVar, input$plotMetric, baseSize = input$baseSize)
+  mu <- get_mu_dyn_long()
+  
+  plot_variability_data(mu, participants, input$plotVar, input$plotMetric, input$varCategory, baseSize = input$baseSize)
 }, height = reactive(input$plotheight))
 ```
