--- a/runtime/index.Rmd
+++ b/runtime/index.Rmd
@@ -45,7 +45,7 @@ dataTypesTargets  <- setdiff(getTypes(allTargetParams), categories)
 
 ## Summary tables
 source('source/summaryparams.R', local = FALSE)
-mu <- get_full_mu(allGaitParams, allQResults, dataTypes, categories)
+mu <- get_full_mu(allGaitParams, allTargetParams, allQResults, categories)
 muDataTypes <- setdiff(getTypes(mu), categories)
 muVars <- colnames(mu)
 ## Plotting code
